tests/baselines/reference/optionalParameterProperty(strict=true).errors.txt
optionalParameterProperty.ts(2,5): error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.
optionalParameterProperty.ts(5,7): error TS2415: Class 'D' incorrectly extends base class 'C'.
  Types of property 'p' are incompatible.
    Type 'number | undefined' is not assignable to type 'number'.
      Type 'undefined' is not assignable to type 'number'.


==== optionalParameterProperty.ts (2 errors) ====
    class C {
        p: number;
        ~
!!! error TS2564: Property 'p' has no initializer and is not definitely assigned in the constructor.
    }
    
    class D extends C { 
          ~
!!! error TS2415: Class 'D' incorrectly extends base class 'C'.
!!! error TS2415:   Types of property 'p' are incompatible.
!!! error TS2415:     Type 'number | undefined' is not assignable to type 'number'.
!!! error TS2415:       Type 'undefined' is not assignable to type 'number'.
        constructor(public p?: number) {
            super();
        }
    }
    